refactor balancer framework: 1. loading StoreBalancerFactory via sub-SPI to avoid possible misconfiguration in conf file 2. support passing config(in the form of json object) via conf file to StoreBalancerFactory 3. support define & inject load rules per StoreBalancer via HTTP API at runtime